Fix dialog title spacing

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,6 @@
 }
 
 .dialog-title {
-  margin: 0.5rem 0;
   font-size: 1.2rem;
 }
 
